--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # #
 
 # Basic
-name:               "reks.io"
+name:               "knck.github.io"
 
 # URL
 baseurl:            "/blog"
@@ -16,9 +16,9 @@ markdown:           rdiscount
 # Navigation
 nav:
   - name:           "meta"
-    href:           "//reks.io/blog/meta"
-  - name:           "XXX"
-    href:           "//github.com/knck"
+    href:           "//knck.github.io/blog/meta"
+  - name:           "contact"
+    href:           "//knck.github.io/blog/contact"
 
 # Sass
 sass:
