--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -1,5 +1,5 @@
 name:               "knck"
-decription:         "blog"
+decription:         "reks.io?"
 
 url:                "//knck.github.io"
 author:             "knck"
